[workspace]
members = [
    "packages/lib/resources",
    "packages/lib/types",
    "packages/lib/utils",
    "packages/app/client/bootstrap/web",
    "packages/app/client/functions",
    "packages/app/client/view",
    "packages/app/server/bootstrap/cloudflare",
    "packages/app/server/bootstrap/docker",
    "packages/app/server/database",
    "packages/app/server/functions",
    "packages/app/server/routes",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
authors = ["langyo <langyo.china@gmail.com>"]
publish = false

version = "0.1.0"
edition = "2021"

[workspace.dependencies]
hikari-components = { git = "https://github.com/celestia-island/hikari" }
hikari-boot = { git = "https://github.com/celestia-island/hikari" }
tairitsu-database = { git = "https://github.com/celestia-island/tairitsu" }
tairitsu-utils = { git = "https://github.com/celestia-island/tairitsu" }
tairitsu-vm = { git = "https://github.com/celestia-island/tairitsu" }

anyhow = "^1"
async-trait = "^0.1"
derive_more = { version = "^1", features = ["full"] }
once_cell = "^1"
cfg-if = "^1"

base64 = "^0.22"
bytes = "^1"
percent-encoding = "^2"
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }

futures = "^0.3"
oneshot = "^0.1"
flume = "^0.11"
tokio = { version = "^1", features = ["full"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
toml = "^0.8"
postcard = { version = "^1", features = ["alloc"] }
strum = { version = "^0.26", features = ["derive"] }
uuid = { version = "^1", features = [
    'v4',
    'fast-rng',
    'macro-diagnostics',
    'serde',
] }

image = { version = "^0.25", features = ["gif", "jpeg", "png", "webp"] }
sqids = "^0.4"

log = "^0.4"
env_logger = "^0.11"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-appender = "^0.2"
console_log = "^1"

web-sys = { version = "^0.3", features = [
    "Window",
    "Document",
    "Navigator",
    "Element",
    "Event",
    "DomRect",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlBodyElement",
    "HtmlStyleElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "HtmlFormElement",
    "Performance",
    "CssStyleDeclaration",
    "WheelEvent",
    "MediaSource",
    "OfflineAudioContext",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioParam",
    "AudioDestinationNode",
    "GainNode",
    "SourceBuffer",
    "CanvasRenderingContext2d",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "SaveFilePickerOptions",
] }
js-sys = "^0.3"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "^0.4"
serde-wasm-bindgen = "^0.6"
gloo = "^0.11"

stylist = { version = "^0.13", features = [
    "yew_integration",
    "ssr",
    "hydration",
] }
yew = { version = "^0.21", features = ["ssr", "hydration"] }
yew-router = "^0.18"

sea-orm = { version = "^1", default-features = false, features = [
    "macros",
    "proxy",
    "with-uuid",
    "with-chrono",
    "with-json",
    "debug-print",
] }
axum = { version = "^0.7", default-features = false, features = [
    "macros",
    "json",
    "query",
    "multipart",
] }
axum-extra = { version = "^0.9", features = [
    "typed-header",
    "multipart",
    "cookie",
] }
reqwest = { version = "^0.12", features = [
    "cookies",
    "gzip",
    "brotli",
    "json",
    "multipart",
] }

worker = { version = "^0.3", features = ['http', 'axum', "d1"] }
worker-macros = { version = "^0.3", features = ['http'] }

[patch.crates-io]
stylist = { git = "https://github.com/langyo/stylist-rs.git", branch = "wasi-support" }
